<resources>
    <string name="app_name">UIExample</string>
    <string name="placeholder">_</string>
    <string name="home_page">首页</string>
    <string name="common_dialog">普通和输入对话框示例页面</string>
    <string name="select_dialog">日期和时间对话框示例页面</string>
    <string name="other_menu">其他</string>
    <string name="context_menu">上下文菜单示例页面</string>
    <string name="people_introduce">人物简介</string>
    <string name="kongfu">武功</string>
    <string name="attack_value">战斗力</string>
    <string name="common_dialog_hint">普通对话框</string>
    <string name="input_dialog_hint">输入对话框</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="date">选择日期</string>
    <string name="time">选择时间</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="progress">进度：</string>
    <string name="volume">音量：</string>

    <string name="d_fi">
        白日依山尽
    </string>

    <string name="d_s">
        黄河入海流
    </string>

    <string name="d_t">
        欲穷千里目
    </string>

    <string name="d_fo">
        更上一层楼
    </string>

    <string name="d_f">
        登鹳雀楼
    </string>
    <string name="previous_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="to_gallery">启动故乡图册</string>
    <string name="to_skip">启动多界面</string>
    <string name="to_custom_view">启动自定义View界面</string>
    <string name="to_media_player">启动音乐播放器</string>
</resources>